src/test/ui/closures/closure-referencing-itself-issue-25954.stderr
error[E0308]: mismatched types
  --> $DIR/closure-referencing-itself-issue-25954.rs:15:13
   |
LL |     let q = || p.b.set(5i32);
   |             ^^^^^^^^^^^^^^^^ cyclic type of infinite size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
